# stm32f1_cmake

./: CMakeLists.txt  README.md
Libraries/: CMakeLists.txt
User/: CMakeLists.txt
User/Inc/: stm32f10x_conf.h
User/Src/: main.c
cmake/: toolchain-gcc-armeabi.cmake
compiler/: retarget.c  startup.c  stm32f1xx.ld
